--- a/src/fibonacci-primarie/2023-seconda-fase/contest/s-3-squadre-basket/s3.blocks.yaml
+++ b/src/fibonacci-primarie/2023-seconda-fase/contest/s-3-squadre-basket/s3.blocks.yaml
@@ -13,7 +13,7 @@
   colour: 20
   tooltip: la fila della fattoria Fibonacci è finita?
   helpUrl: ""
-  js: hiddenState.data[0].pos === hiddenState.data[0].H.length
+  js: state.data[0].pos === state.data[0].H.length
 
 - type: fine della fila Turing
   message0: fine della fila Turing
@@ -21,7 +21,7 @@
   colour: 20
   tooltip: la fila della fattoria Turing è finita?
   helpUrl: ""
-  js: hiddenState.data[1].pos === hiddenState.data[1].H.length
+  js: state.data[1].pos === state.data[1].H.length
 
 - type: altezza primo della fila Fibonacci
   message0: altezza primo della fila Fibonacci
@@ -30,7 +30,7 @@
   tooltip: l'altezza del primo coniglio nella fila della fattoria Fibonacci
   helpUrl: ""
   js: |
-    hiddenState.data[0].pos === hiddenState.data[0].H.length ? exit(false, "la fila Fibonacci è finita") : hiddenState.data[0].H[hiddenState.data[0].pos]
+    state.data[0].pos === state.data[0].H.length ? exit(false, "la fila Fibonacci è finita") : state.data[0].H[state.data[0].pos]
 
 - type: altezza primo della fila Turing
   message0: altezza primo della fila Turing
@@ -39,7 +39,7 @@
   tooltip: l'altezza del primo coniglio nella fila della fattoria Turing
   helpUrl: ""
   js: |
-    hiddenState.data[1].pos === hiddenState.data[1].H.length ? exit(false, "la fila Turing è finita") : hiddenState.data[1].H[hiddenState.data[1].pos]
+    state.data[1].pos === state.data[1].H.length ? exit(false, "la fila Turing è finita") : state.data[1].H[state.data[1].pos]
 
 - type: prendi dalla fila Fibonacci
   message0: prendi dalla fila Fibonacci
@@ -49,12 +49,12 @@
   tooltip: prendi il prossimo coniglio dalla fila della fattoria Fibonacci
   helpUrl: ""
   js: |
-    hiddenState.data[0].presi[hiddenState.data[0].presi.length] = hiddenState.data[0].H[hiddenState.data[0].pos];
-    if (hiddenState.data[0].pos === hiddenState.data[0].H.length)
+    state.data[0].presi[state.data[0].presi.length] = state.data[0].H[state.data[0].pos];
+    if (state.data[0].pos === state.data[0].H.length)
       exit(false, "la fila Fibonacci è finita");
-    hiddenState.data[0].scelta[hiddenState.data[0].pos] = hiddenState.data[0].presi.length;
-    hiddenState.data[0].pos += 1
-    if (hiddenState.data[0].presi.length <= hiddenState.data[1].presi.length && hiddenState.data[0].presi[hiddenState.data[0].presi.length-1] !== hiddenState.data[1].presi[hiddenState.data[0].presi.length-1])
+    state.data[0].scelta[state.data[0].pos] = state.data[0].presi.length;
+    state.data[0].pos += 1
+    if (state.data[0].presi.length <= state.data[1].presi.length && state.data[0].presi[state.data[0].presi.length-1] !== state.data[1].presi[state.data[0].presi.length-1])
       exit(false, "l'ultimo preso da Fibonacci ha un'altezza che non corrisponde");
 
 - type: prendi dalla fila Turing
@@ -65,12 +65,12 @@
   tooltip: prendi il prossimo coniglio dalla fila della fattoria Turing
   helpUrl: ""
   js: |
-    hiddenState.data[1].presi[hiddenState.data[1].presi.length] = hiddenState.data[1].H[hiddenState.data[1].pos];
-    if (hiddenState.data[1].pos === hiddenState.data[1].H.length)
+    state.data[1].presi[state.data[1].presi.length] = state.data[1].H[state.data[1].pos];
+    if (state.data[1].pos === state.data[1].H.length)
       exit(false, "la fila Turing è finita");
-    hiddenState.data[1].scelta[hiddenState.data[1].pos] = hiddenState.data[1].presi.length;
-    hiddenState.data[1].pos += 1
-    if (hiddenState.data[1].presi.length <= hiddenState.data[0].presi.length && hiddenState.data[1].presi[hiddenState.data[1].presi.length-1] !== hiddenState.data[0].presi[hiddenState.data[1].presi.length-1])
+    state.data[1].scelta[state.data[1].pos] = state.data[1].presi.length;
+    state.data[1].pos += 1
+    if (state.data[1].presi.length <= state.data[0].presi.length && state.data[1].presi[state.data[1].presi.length-1] !== state.data[0].presi[state.data[1].presi.length-1])
       exit(false, "l'ultimo preso da Turing ha un'altezza che non corrisponde");
 
 - type: scarta dalla fila Fibonacci
@@ -81,11 +81,11 @@
   tooltip: scarta il prossimo coniglio dalla fila della fattoria Fibonacci
   helpUrl: ""
   js: |
-    hiddenState.data[0].scartati[hiddenState.data[0].scartati.length] = hiddenState.data[0].H[hiddenState.data[0].pos];
-    if (hiddenState.data[0].pos === hiddenState.data[0].H.length)
+    state.data[0].scartati[state.data[0].scartati.length] = state.data[0].H[state.data[0].pos];
+    if (state.data[0].pos === state.data[0].H.length)
       exit(false, "la fila Fibonacci è finita");
-    hiddenState.data[0].scelta[hiddenState.data[0].pos] = -hiddenState.data[0].scartati.length;
-    hiddenState.data[0].pos += 1
+    state.data[0].scelta[state.data[0].pos] = -state.data[0].scartati.length;
+    state.data[0].pos += 1
 
 - type: scarta dalla fila Turing
   message0: scarta dalla fila Turing
@@ -95,11 +95,11 @@
   tooltip: scarta il prossimo coniglio dalla fila della fattoria Turing
   helpUrl: ""
   js: |
-    hiddenState.data[1].scartati[hiddenState.data[1].scartati.length] = hiddenState.data[1].H[hiddenState.data[1].pos];
-    if (hiddenState.data[1].pos === hiddenState.data[1].H.length)
+    state.data[1].scartati[state.data[1].scartati.length] = state.data[1].H[state.data[1].pos];
+    if (state.data[1].pos === state.data[1].H.length)
       exit(false, "la fila Turing è finita");
-    hiddenState.data[1].scelta[hiddenState.data[1].pos] = -hiddenState.data[1].scartati.length;
-    hiddenState.data[1].pos += 1
+    state.data[1].scelta[state.data[1].pos] = -state.data[1].scartati.length;
+    state.data[1].pos += 1
 
 - type: termina
   message0: termina
@@ -108,10 +108,10 @@
   tooltip: termina il procedimento
   helpUrl: ""
   js: |
-    if (hiddenState.data[0].presi.length !== hiddenState.data[1].presi.length)
+    if (state.data[0].presi.length !== state.data[1].presi.length)
       exit(false, "le due squadre non hanno lo stesso numero di giocatori");
-    if (hiddenState.data[0].presi.length < hiddenState.sol)
-      exit(false, "hai fatto squadre da " + hiddenState.data[0].presi.length + " ma potevi farle da " + hiddenState.sol);
-    if (hiddenState.data[0].presi.length > hiddenState.sol)
+    if (state.data[0].presi.length < state.sol)
+      exit(false, "hai fatto squadre da " + state.data[0].presi.length + " ma potevi farle da " + state.sol);
+    if (state.data[0].presi.length > state.sol)
       exit(false, "problema di correzione");
     exit(true, "hai scelto bene le squadre, complimenti!");
