--- a/src/fibonacci-secondarie/2023-terza-fase/contest/s-3-calcolatrice/s3.blocks.yaml
+++ b/src/fibonacci-secondarie/2023-terza-fase/contest/s-3-calcolatrice/s3.blocks.yaml
@@ -13,7 +13,7 @@
   colour: 20
   tooltip: il numero da raggiungere
   helpUrl: ""
-  js: hiddenState.N
+  js: state.N
 
 - type: termina
   message0: termina in %1 operazioni
@@ -29,7 +29,7 @@
     (function(i) {
       if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
       if (i < 0 || Math.floor(i) != i) exit(false, "numero di operazioni " + i + " non valido");
-      if (i > hiddenState.sol) exit(false, "potevi fare meno di " + i + " operazioni");
-      if (i < hiddenState.sol) exit(false, "non si può ottenere " + hiddenState.N + " con " + i + " operazioni");
+      if (i > state.sol) exit(false, "potevi fare meno di " + i + " operazioni");
+      if (i < state.sol) exit(false, "non si può ottenere " + state.N + " con " + i + " operazioni");
       exit(true, i + " è il numero minimo di operazioni, complimenti!");
     })(%0);
