--- a/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-2-alza-torre/s2.blocks.yaml
+++ b/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-2-alza-torre/s2.blocks.yaml
@@ -20,10 +20,10 @@
   js: |
     (function(i) {
       if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
-      if (i < 1 || i > hiddenState.N)
+      if (i < 1 || i > state.N)
         exit(false, "la scatola " + i + " non esiste");
-      hiddenState.pos = i-1;
-      return hiddenState.rot[i-1] ? hiddenState.larghezze[i-1] : hiddenState.altezze[i-1];
+      state.pos = i-1;
+      return state.rot[i-1] ? state.larghezze[i-1] : state.altezze[i-1];
     })(%0)
 
 - type: larghezza della scatola
@@ -39,10 +39,10 @@
   js: |
     (function(i) {
       if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
-      if (i < 1 || i > hiddenState.N)
+      if (i < 1 || i > state.N)
         exit(false, "la scatola " + i + " non esiste");
-      hiddenState.pos = i-1;
-      return hiddenState.rot[i-1] ? hiddenState.altezze[i-1] : hiddenState.larghezze[i-1];
+      state.pos = i-1;
+      return state.rot[i-1] ? state.altezze[i-1] : state.larghezze[i-1];
     })(%0)
 
 - type: ruota la scatola
@@ -59,10 +59,10 @@
   js: |
     (function(i) {
       if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
-      if (i < 1 || i > hiddenState.N)
+      if (i < 1 || i > state.N)
         exit(false, "la scatola " + i + " non esiste");
-      hiddenState.rot[i-1] = !hiddenState.rot[i-1];
-      hiddenState.pos = i-1;
+      state.rot[i-1] = !state.rot[i-1];
+      state.pos = i-1;
     })(%0);
 
 - type: N
@@ -71,7 +71,7 @@
   colour: 20
   tooltip: Numero di scatole
   helpUrl: ""
-  js: hiddenState.N
+  js: state.N
 
 - type: riporta altezza
   message0: riporta altezza %1
@@ -87,11 +87,11 @@
     (function(t) {
       if (t === undefined) exit(false, "l'argomento del blocco non ha un valore");
       var sum = 0;
-      for (var i = 0; i < hiddenState.N; i++) {
-        if (hiddenState.larghezze[i] != hiddenState.altezze[i])
-          if (hiddenState.rot[i] != (hiddenState.altezze[i] < hiddenState.larghezze[i]))
+      for (var i = 0; i < state.N; i++) {
+        if (state.larghezze[i] != state.altezze[i])
+          if (state.rot[i] != (state.altezze[i] < state.larghezze[i]))
             exit(false, "la scatola " + (i+1) + " non è ruotata bene");
-        sum += hiddenState.altezze[i] > hiddenState.larghezze[i] ? hiddenState.altezze[i] : hiddenState.larghezze[i];
+        sum += state.altezze[i] > state.larghezze[i] ? state.altezze[i] : state.larghezze[i];
       }
       if (sum == t)
         exit(true, "hai fatto la torre più alta, bravo!");
