--- a/src/fibonacci-primarie/2023-seconda-fase/contest/s-2-gara-salto/s2.blocks.yaml
+++ b/src/fibonacci-primarie/2023-seconda-fase/contest/s-2-gara-salto/s2.blocks.yaml
@@ -13,7 +13,7 @@
   colour: 20
   tooltip: numero totale di palloni da sistemare
   helpUrl: ""
-  js: hiddenState.N
+  js: state.N
 
 - type: altezza della pila
   message0: altezza della pila %1
@@ -27,10 +27,10 @@
   helpUrl: ""
   js: |
     (function(i) {
-      hiddenState.pos = i - (hiddenState.pos > i-1 ? 0.5 : 1.5);
-      if (i < 1 || i > hiddenState.N)
+      state.pos = i - (state.pos > i-1 ? 0.5 : 1.5);
+      if (i < 1 || i > state.N)
         exit(false, "la pila " + i + " non esiste");
-      return hiddenState.H[i-1];
+      return state.H[i-1];
     })(%0)
 
 - type: aggiungi carota alla pila
@@ -46,12 +46,12 @@
   helpUrl: ""
   js: |
     (function(i) {
-      hiddenState.pos = i - (hiddenState.pos > i-1 ? 0.5 : 1.5);
-      if (i < 1 || i > hiddenState.N)
+      state.pos = i - (state.pos > i-1 ? 0.5 : 1.5);
+      if (i < 1 || i > state.N)
         exit(false, "la pila " + i + " non esiste");
-      hiddenState.C[i-1] += 1;
-      hiddenState.carrots[hiddenState.carrots.length] = i;
-      if (hiddenState.C[i-1] === 3)
+      state.C[i-1] += 1;
+      state.carrots[state.carrots.length] = i;
+      if (state.C[i-1] === 3)
         exit(false, "hai messo una terza carota");
     })(%0);
 
@@ -62,17 +62,17 @@
   tooltip: termina il procedimento
   helpUrl: ""
   js: |
-    for (var i=0; i<hiddenState.N; i++) {
-      if (hiddenState.C[i] === hiddenState.sol[i]) continue;
-      if (hiddenState.sol[i] === 0)
+    for (var i=0; i<state.N; i++) {
+      if (state.C[i] === state.sol[i]) continue;
+      if (state.sol[i] === 0)
         exit(false, "non dovevi mettere carote nella pila " + (i+1));
-      if (hiddenState.C[i] === 0 && hiddenState.sol[i] == 1)
+      if (state.C[i] === 0 && state.sol[i] == 1)
         exit(false, "non hai messo la carota nella pila " + (i+1));
-      if (hiddenState.C[i] === 0 && hiddenState.sol[i] == 2)
+      if (state.C[i] === 0 && state.sol[i] == 2)
         exit(false, "non hai messo le due carote nella pila " + (i+1));
-      if (hiddenState.C[i] === 2)
+      if (state.C[i] === 2)
         exit(false, "non ci voleva la seconda carota nella pila " + (i+1));
-      if (hiddenState.C[i] === 1)
+      if (state.C[i] === 1)
         exit(false, "manca la seconda carota nella pila " + (i+1));
       exit(false, "problema di correzione");
     }
