--- a/src/fibonacci-secondarie/2023-terza-fase/contest/s-2-montagna/s2.blocks.yaml
+++ b/src/fibonacci-secondarie/2023-terza-fase/contest/s-2-montagna/s2.blocks.yaml
@@ -13,7 +13,7 @@
   colour: 20
   tooltip: numero di colonnine lungo il percorso
   helpUrl: ""
-  js: hiddenState.N
+  js: state.N
 
 - type: energia
   message0: energia
@@ -21,7 +21,7 @@
   colour: 20
   tooltip: energia rimasta
   helpUrl: ""
-  js: hiddenState.energy
+  js: state.energy
 
 - type: altitudine della colonnina
   message0: altitudine della colonnina %1
@@ -36,9 +36,9 @@
   js: |
     (function(i) {
       if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
-      if (i < 1 || i > hiddenState.N || Math.floor(i) != i)
+      if (i < 1 || i > state.N || Math.floor(i) != i)
         exit(false, "la colonnina " + i + " non esiste");
-      return hiddenState.H[i-1];
+      return state.H[i-1];
     })(%0)
 
 - type: avanza
@@ -49,29 +49,29 @@
   tooltip: avanza fino alla prossima colonnina
   helpUrl: ""
   js: |
-    hiddenState.charging = false;
-    if (hiddenState.posx == hiddenState.N-1)
+    state.charging = false;
+    if (state.posx == state.N-1)
       exit(false, "sei già arrivato alla fine");
-    delta = hiddenState.H[hiddenState.posx+1] - hiddenState.H[hiddenState.posx];
-    hiddenState.rot = Math.atan2(hiddenState.scale * delta, 1);
+    delta = state.H[state.posx+1] - state.H[state.posx];
+    state.rot = Math.atan2(state.scale * delta, 1);
     pause(1);
-    if (hiddenState.energy >= delta) {
-      hiddenState.posx += 1;
-      hiddenState.posy += hiddenState.scale * delta;
-      hiddenState.energy -= delta;
+    if (state.energy >= delta) {
+      state.posx += 1;
+      state.posy += state.scale * delta;
+      state.energy -= delta;
     } else {
-      hiddenState.posx += hiddenState.energy / delta;
-      hiddenState.posy += hiddenState.scale * hiddenState.energy;
-      hiddenState.energy = 0;
+      state.posx += state.energy / delta;
+      state.posy += state.scale * state.energy;
+      state.energy = 0;
       exit(false, "hai finito l'energia prima di arrivare");
     }
     pause(1);
-    if (hiddenState.posx < hiddenState.N-1)
-      hiddenState.rot = (
-        Math.atan2(hiddenState.scale * (hiddenState.H[hiddenState.posx+1] - hiddenState.H[hiddenState.posx]), 1) +
-        Math.atan2(hiddenState.scale * (hiddenState.H[hiddenState.posx] - hiddenState.H[hiddenState.posx-1]), 1)
+    if (state.posx < state.N-1)
+      state.rot = (
+        Math.atan2(state.scale * (state.H[state.posx+1] - state.H[state.posx]), 1) +
+        Math.atan2(state.scale * (state.H[state.posx] - state.H[state.posx-1]), 1)
       )/2;
-    else hiddenState.rot = 0;
+    else state.rot = 0;
 
 - type: ricarica
   message0: ricarica per %1 minuti
@@ -89,9 +89,9 @@
       if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
       if (i < 0 || i > 1000000 || Math.floor(i) != i)
         exit(false, "numero di minuti " + i + " non valido");
-      hiddenState.time += i;
-      hiddenState.energy += i;
-      hiddenState.charging = true;
+      state.time += i;
+      state.energy += i;
+      state.charging = true;
     })(%0);
 
 - type: termina
@@ -101,9 +101,9 @@
   tooltip: termina il procedimento
   helpUrl: ""
   js: |
-    hiddenState.charging = false;
-    if (hiddenState.pos < hiddenState.N-1)
+    state.charging = false;
+    if (state.pos < state.N-1)
       exit(false, "non sei arrivato alla fine");
-    if (hiddenState.time > hiddenState.sol)
+    if (state.time > state.sol)
       exit(false, "potevi aspettare meno alle colonnine");
     exit(true, "sei arrivato in fretta, complimenti!");
