--- a/src/fibonacci-secondarie/2023-terza-fase/contest/s-4-superbunny/s4.blocks.yaml
+++ b/src/fibonacci-secondarie/2023-terza-fase/contest/s-4-superbunny/s4.blocks.yaml
@@ -13,7 +13,7 @@
   colour: 20
   tooltip: il numero di ostacoli
   helpUrl: ""
-  js: hiddenState.N
+  js: state.N
 
 - type: pedana alta
   message0: pedana alta %1
@@ -28,9 +28,9 @@
   js: |
     (function(i) {
       if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
-      if (i < 1 || i > hiddenState.N || Math.floor(i) != i)
+      if (i < 1 || i > state.N || Math.floor(i) != i)
         exit(false, "l'ostacolo " + i + " non esiste");
-      return hiddenState.A[i-1];
+      return state.A[i-1];
     })(%0)
 
 - type: pedana bassa
@@ -46,9 +46,9 @@
   js: |
     (function(i) {
       if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
-      if (i < 1 || i > hiddenState.N || Math.floor(i) != i)
+      if (i < 1 || i > state.N || Math.floor(i) != i)
         exit(false, "l'ostacolo " + i + " non esiste");
-      return hiddenState.B[i-1];
+      return state.B[i-1];
     })(%0)
 
 - type: differenza assoluta
@@ -105,8 +105,8 @@
     (function(i) {
       if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
       if (i < 0 || Math.floor(i) != i) exit(false, "tempo " + i + " non valido");
-      if (i > hiddenState.sol) exit(false, "potevi metterci meno di " + i + " tempo");
-      if (i < hiddenState.sol) exit(false, "non si può finire il livello in " + i + " tempo");
+      if (i > state.sol) exit(false, "potevi metterci meno di " + i + " tempo");
+      if (i < state.sol) exit(false, "non si può finire il livello in " + i + " tempo");
       exit(true, i + " è il tempo minimo per finire il livello, complimenti!");
     })(%0);
 
@@ -123,9 +123,9 @@
   js: |
     (function(i) {
       if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
-      if (i < 1 || i > hiddenState.N || Math.floor(i) != i)
+      if (i < 1 || i > state.N || Math.floor(i) != i)
         exit(false, "l'ostacolo " + i + " non esiste");
-      return hiddenState.VA[i-1];
+      return state.VA[i-1];
     })(%0)
 
 - type: valore pedana bassa
@@ -141,9 +141,9 @@
   js: |
     (function(i) {
       if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
-      if (i < 1 || i > hiddenState.N || Math.floor(i) != i)
+      if (i < 1 || i > state.N || Math.floor(i) != i)
         exit(false, "l'ostacolo " + i + " non esiste");
-      return hiddenState.VB[i-1];
+      return state.VB[i-1];
     })(%0)
 
 - type: imposta valore pedana alta
@@ -163,9 +163,9 @@
   js: |
     (function(i, x) {
       if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
-      if (i < 1 || i > hiddenState.N || Math.floor(i) != i)
+      if (i < 1 || i > state.N || Math.floor(i) != i)
         exit(false, "l'ostacolo " + i + " non esiste");
-      hiddenState.VA[i-1] = x;
+      state.VA[i-1] = x;
     })(%0, %1);
 
 - type: imposta valore pedana bassa
@@ -185,7 +185,7 @@
   js: |
     (function(i, x) {
       if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
-      if (i < 1 || i > hiddenState.N || Math.floor(i) != i)
+      if (i < 1 || i > state.N || Math.floor(i) != i)
         exit(false, "l'ostacolo " + i + " non esiste");
-      hiddenState.VB[i-1] = x;
+      state.VB[i-1] = x;
     })(%0, %1);
