--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@olinfo/quizms": "^1.0",
     "@olinfo/react-components": "^0.7",
     "@olinfo/tailwind": "^0.1",
+    "@types/d3-shape": "^3.1.6",
     "@types/lodash-es": "^4.17",
     "@types/react": "^18",
     "autoprefixer": "^10.4",
     "clsx": "^2.1",
+    "d3-shape": "^3.2.0",
     "date-fns": "^3.6",
     "lodash-es": "^4.17",
     "postcss": "^8.4",
