--- a/src/fibonacci-secondarie/2023-terza-fase/contest/s-3-calcolatrice/s3.blocks.yaml
+++ b/src/fibonacci-secondarie/2023-terza-fase/contest/s-3-calcolatrice/s3.blocks.yaml
@@ -26,7 +26,7 @@
   helpUrl: ""
   js: |
     (function(i) {
-      if (i < 0 || Math.floor(i) != i) exit(false, "numero di operazioni " + i + " non valido");
+      if (i < 0 || Math.floor(i) !== i) exit(false, "numero di operazioni " + i + " non valido");
       if (i > state.sol) exit(false, "potevi fare meno di " + i + " operazioni");
       if (i < state.sol) exit(false, "non si può ottenere " + state.N + " con " + i + " operazioni");
       exit(true, i + " è il numero minimo di operazioni, complimenti!");
