--- a/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-1-apri-porte/s1.blocks.yaml
+++ b/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-1-apri-porte/s1.blocks.yaml
@@ -47,7 +47,7 @@
   tooltip: apri porta
   helpUrl: ""
   js: |
-    if(state.pos == state.N || state.door[state.pos] === 0 || state.open[state.pos]) {
+    if(state.pos === state.N || state.door[state.pos] === 0 || state.open[state.pos]) {
       exit(false, "non ci sono porte da aprire");
     }
     state.open[state.pos] = true;
