--- a/src/fibonacci-secondarie/2023-terza-fase/contest/s-1-cioccolato/s1.blocks.yaml
+++ b/src/fibonacci-secondarie/2023-terza-fase/contest/s-1-cioccolato/s1.blocks.yaml
@@ -43,7 +43,7 @@
   helpUrl: ""
   js: |
     (function(i) {
-      if (i <= 0 || Math.floor(i) != i) exit(false, "numero di righe " + i + " non valido");
+      if (i <= 0 || Math.floor(i) !== i) exit(false, "numero di righe " + i + " non valido");
       if (i > state.M) exit(false, "non ci sono " + i + " righe");
       state.M -= i;
       state.K -= 1;
@@ -62,7 +62,7 @@
   helpUrl: ""
   js: |
     (function(i) {
-      if (i <= 0 || Math.floor(i) != i) exit(false, "numero di colonne " + i + " non valido");
+      if (i <= 0 || Math.floor(i) !== i) exit(false, "numero di colonne " + i + " non valido");
       if (i > state.N) exit(false, "non ci sono " + i + " colonne");
       state.N -= i;
       state.K -= 1;
