--- a/src/fibonacci-secondarie/2023-terza-fase/contest/s-4-superbunny/s4.blocks.yaml
+++ b/src/fibonacci-secondarie/2023-terza-fase/contest/s-4-superbunny/s4.blocks.yaml
@@ -30,7 +30,7 @@
   helpUrl: ""
   js: |
     (function(i) {
-      if (i < 1 || i > state.N || Math.floor(i) != i)
+      if (i < 1 || i > state.N || Math.floor(i) !== i)
         exit(false, "l'ostacolo " + i + " non esiste");
       return state.%1[i-1];
     })(%2)
@@ -80,7 +80,7 @@
   helpUrl: ""
   js: |
     (function(i) {
-      if (i < 0 || Math.floor(i) != i) exit(false, "tempo " + i + " non valido");
+      if (i < 0 || Math.floor(i) !== i) exit(false, "tempo " + i + " non valido");
       if (i > state.sol) exit(false, "potevi metterci meno di " + i + " tempo");
       if (i < state.sol) exit(false, "non si può finire il livello in " + i + " tempo");
       exit(true, i + " è il tempo minimo per finire il livello, complimenti!");
@@ -101,7 +101,7 @@
   helpUrl: ""
   js: |
     (function(i) {
-      if (i < 1 || i > state.N || Math.floor(i) != i)
+      if (i < 1 || i > state.N || Math.floor(i) !== i)
         exit(false, "l'ostacolo " + i + " non esiste");
       return state.%1[i-1];
     })(%2)
@@ -124,7 +124,7 @@
   helpUrl: ""
   js: |
     (function(i, x) {
-      if (i < 1 || i > state.N || Math.floor(i) != i)
+      if (i < 1 || i > state.N || Math.floor(i) !== i)
         exit(false, "l'ostacolo " + i + " non esiste");
       state.%1[i-1] = x;
     })(%2, %3);
