--- a/src/fibonacci-primarie/2023-seconda-fase/contest/s-2-gara-salto/s2.blocks.yaml
+++ b/src/fibonacci-primarie/2023-seconda-fase/contest/s-2-gara-salto/s2.blocks.yaml
@@ -19,7 +19,9 @@
   message0: altezza della pila %1
   args0:
     - type: input_value
-      check: Number
+      check: Integer
+      min: "1"
+      max: state.N
   output: Number
   colour: 20
   tooltip: altezza della pila i-esima
@@ -27,8 +29,6 @@
   js: |
     (function(i) {
       state.pos = i - (state.pos > i-1 ? 0.5 : 1.5);
-      if (i < 1 || i > state.N)
-        exit(false, "la pila " + i + " non esiste");
       return state.H[i-1];
     })(%1)
 
@@ -36,7 +36,9 @@
   message0: aggiungi carota alla pila %1
   args0:
     - type: input_value
-      check: Number
+      check: Integer
+      min: "1"
+      max: state.N
   previousStatement: null
   nextStatement: null
   colour: 20
@@ -45,8 +47,6 @@
   js: |
     (function(i) {
       state.pos = i - (state.pos > i-1 ? 0.5 : 1.5);
-      if (i < 1 || i > state.N)
-        exit(false, "la pila " + i + " non esiste");
       state.C[i-1] += 1;
       state.carrots[state.carrots.length] = i;
       if (state.C[i-1] === 3)
